--- a/accounts/templates/login.html
+++ b/accounts/templates/login.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
     <head>
@@ -5,11 +6,11 @@
         <script src="https://cdn.tailwindcss.com"></script>
     </head>
     <body>
-      
+     {% include 'navbar.html' %}
 
 <div class="mx-auto max-w-screen-xl px-4 py-16 sm:px-6 lg:px-8">
   <div class="mx-auto max-w-lg text-center">
-    <h1 class="text-2xl font-bold sm:text-3xl">Get started today!</h1>
+    <h1 class="text-2xl font-bold sm:text-3xl">Log in!</h1>
 
     <p class="mt-4 text-gray-500">
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Et libero nulla
