--- a/accounts/templates/register.html
+++ b/accounts/templates/register.html
@@ -5,6 +5,7 @@
         <script src="https://cdn.tailwindcss.com"></script>
     </head>
     <body>
+      {% include 'navbar.html' %}
       
 
 <div class="mx-auto max-w-screen-xl px-4 py-16 sm:px-6 lg:px-8">
