added text to login and register

--- a/accounts/templates/login.html
+++ b/accounts/templates/login.html
@@ -13,8 +13,7 @@
     <h1 class="text-2xl font-bold sm:text-3xl">Log in!</h1>
 
     <p class="mt-4 text-gray-500">
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Et libero nulla
-      eaque error neque ipsa culpa autem, at itaque nostrum!
+      Login to Manage Your College Experience
     </p>
   </div>
 
