--- a/accounts/templates/login.html
+++ b/accounts/templates/login.html
@@ -27,7 +27,7 @@
         <input
           name="username"
           class="w-full rounded-lg border-gray-200 p-4 pr-12 text-sm shadow-sm"
-          placeholder="Enter email"
+          placeholder="Enter username"
         />
 
         <span class="absolute inset-y-0 right-0 grid place-content-center px-4">
