Login system now works as intended

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,12 +1,1 @@
-
-<!DOCTYPE html>
-<html>
-    <head>
-        <title> HOME PAGE</title>
-    </head>
-    <body>
-        {% include 'navbar.html' %}
-        <h1> THIS IS THE TEST HOME PAGE</h1>
-    
-    </body>
-</html>
+<h1> DASH</h1>
