--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -31,7 +31,7 @@
             {% if user.is_authenticated %}
             <a
               class="rounded-md bg-teal-600 px-5 py-2.5 text-sm font-medium text-white shadow"
-              href="{% url 'login-page' %}"
+              href="{% url 'home-page' %}"
             >
               Logout
             </a>
@@ -47,7 +47,7 @@
             <div class="hidden sm:flex">
               <a
                 class="rounded-md bg-gray-100 px-5 py-2.5 text-sm font-medium text-teal-600"
-                href="{% url 'home-page' %}"
+                href="{% url 'register-page' %}"
               >
                 Register
               </a>
