--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -31,7 +31,7 @@
             {% if user.is_authenticated %}
             <a
               class="rounded-md bg-teal-600 px-5 py-2.5 text-sm font-medium text-white shadow"
-              href="{% url 'home-page' %}"
+              href="{% url 'logout-page' %}"
             >
               Logout
             </a>
