--- a/account/templates/login.html
+++ b/account/templates/login.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title> Signup</title>
+        <title> Log in</title>
         <script src="https://cdn.tailwindcss.com"></script>
     </head>
     <body>
