--- a/account/templates/register.html
+++ b/account/templates/register.html
@@ -1,7 +1,13 @@
 {% include 'navbar.html' %}
 {% load static %}
 
-<body>
+<link rel="stylesheet" href="{% static 'images/style.css' %}">
+
+<div id="modal" _="on closeModal add .closing then wait for animationend then remove me">
+	<div class="modal-underlay" id="underlay" _="on click trigger closeModal"></div>
+	<div class="modal-content" id="mod">
+ 
+    
     <div class="h-screen flex flex-col justify-center items-center">
       <div class="container mx-auto ">
         <div class="flex flex-col lg:flex-row w-10/12 lg:w-8/12 bg-white rounded-xl mx-auto shadow-lg overflow-hidden">
@@ -53,11 +59,22 @@
               </div>
 
               <div class="mt-5">
-                <button class="w-full bg-teal-700 hover:bg-teal-600 py-3 text-center text-white">Register Now</button>
+                <button _= "on click trigger closeModal" hx-post="/register/" hx-target="body" class="w-full bg-teal-700 hover:bg-teal-600 py-3 text-center text-white">Register Now</button>
               </div>
             </form>
           </div>
         </div>
       </div>
     </div>
-</body>
+    </div>  
+    </div>
+    
+    <script>
+       let closeModel =()=>{
+        htmx.remove(htmx.find("#mod"));
+       }
+      let underlay = document.getElementById("underlay")
+      underlay.addEventListener("click",closeModel);
+      
+       
+    </script>
