--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -2,6 +2,8 @@
 <html>
     <head>
         <script src="https://cdn.tailwindcss.com"></script>
+          <script src="https://unpkg.com/htmx.org@1.8.6"></script>
+
     </head>
    <body>
     <header aria-label="Site Header" class="bg-white">
