Changed phone number validation , no country code

--- a/account/templates/register.html
+++ b/account/templates/register.html
@@ -49,6 +49,11 @@
                 {{form.address.label}}
                 {{form.address}}
               </div>
+              <div class="mt-5">
+                {{form.faculty.label}}
+                {{form.faculty}}
+              </div>
+
 
               <div class="mt-5">
                 <button _= "on click trigger closeModal" hx-post="/add_student/" hx-target="body" class="w-full bg-teal-700 hover:bg-teal-600 py-3 text-center text-white">Register Now</button>
