Added course pages

--- a/account/templates/register.html
+++ b/account/templates/register.html
@@ -20,8 +20,8 @@
           </div>
           <div class="w-full lg:w-1/2 py-8 px-8">
             <h2  class="text-3xl mb-4">Register</h2>
-            <p class="mb-4">
-              Ready to take the first step? Register now and start your journey with us!
+            <p class="mb-4 text-xl">
+              Register a new student.
             </p>
             <form action="#" method="POST">
               {% csrf_token %}
