--- a/account/templates/register.html
+++ b/account/templates/register.html
@@ -4,8 +4,8 @@
 <link rel="stylesheet" href="{% static 'images/style.css' %}">
 
 <div id="modal" _="on closeModal add .closing then wait for animationend then remove me">
-	<div class="modal-underlay" id="underlay" _="on click trigger closeModal"></div>
-	<div class="modal-content" id="mod">
+	<div class="modal-underlay"  _="on click trigger closeModal"></div>
+	<div class="modal-content">
  
     
     <div class="h-screen flex flex-col justify-center items-center">
@@ -21,9 +21,13 @@
           <div class="w-full lg:w-1/2 py-8 px-8">
             <h2  class="text-3xl mb-4">Register</h2>
             <p class="mb-4 text-xl">
+              {% if faculty == 'teacher' %}
+              Register a new teacher.
+              {% else %}
               Register a new student.
+              {% endif %}
             </p>
-            <form action="#" method="POST">
+            <form  method="POST" hx-post="/add_student/" hx-trigger="reset" hx-boost="#modal">
               {% csrf_token %}
               <div class="grid grid-cols-2 gap-5">
                
@@ -41,22 +45,22 @@
                 {{form.phone_number.label}}
                 {{form.phone_number}}
               </div>
+             
               <div class="mt-5">
-                {{form.semester.label}}
+                 {% if faculty != 'teacher' %}
+              {{form.semester.label}}
                {{form.semester}}
+              {% endif %}
               </div>
               <div class="mt-5">
                 {{form.address.label}}
                 {{form.address}}
               </div>
-              <div class="mt-5">
-                {{form.faculty.label}}
-                {{form.faculty}}
-              </div>
+             
 
 
               <div class="mt-5">
-                <button _= "on click trigger closeModal" hx-post="/add_student/" hx-target="body" class="w-full bg-teal-700 hover:bg-teal-600 py-3 text-center text-white">Register Now</button>
+                <button _= "on click trigger closeModal"  class="w-full bg-teal-700 hover:bg-teal-600 py-3 text-center text-white">Register Now</button>
               </div>
             </form>
           </div>
