--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,7 +1,8 @@
+{% load tailwind_tags %}
 <!DOCTYPE html> 
 <html>
     <head>
-        <script src="https://cdn.tailwindcss.com"></script>
+      {% tailwind_css %} 
           <script src="https://unpkg.com/htmx.org@1.8.6"></script>
 
     </head>
