--- a/account/templates/adash.html
+++ b/account/templates/adash.html
@@ -10,14 +10,15 @@
 {% load static %}
 <head>
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="{% static 'images/style.css' %}">
 </head>
 <body>
     {% include 'navbar.html' %}
-    <div class="min-w-screen h-screen animated fadeIn faster  fixed  left-0 top-0 flex justify-center items-center inset-0 z-50 outline-none focus:outline-none bg-no-repeat bg-center bg-cover"  style="background-image: url('{% static 'images/adash.png' %}');" id="modal-id">
+    <div class="min-w-screen h-screen animated fadeIn faster  fixed  left-0 top-0 flex justify-center items-center inset-0 z-50 outline-none focus:outline-none bg-no-repeat bg-center bg-cover" id="modal-id">
         <div class="absolute bg-black opacity-80 inset-0 z-0"></div>
     <div class="relative min-h-screen flex flex-col items-center justify-center "> 
         <div class="grid mt-8  gap-8 grid-cols-1 md:grid-cols-3 xl:grid-cols-3">
-            <a href="">
+            <a href="{% url 'course-detail-view' 'csit' %}">
                 <div class="flex flex-col">
                     <div class="bg-white shadow-md  rounded-3xl p-4">
                         <div class="flex-none lg:flex">
@@ -46,7 +47,7 @@
                     </div>
                 </div>
             </a>
-            <a href="">
+            <a href="{% url 'course-detail-view' 'bim' %}">
                 <div class="flex flex-col ">
                     <div class="bg-white shadow-md  rounded-3xl p-4">
                         <div class="flex-none lg:flex">
@@ -75,7 +76,7 @@
                     </div>
                 </div>
             </a>
-            <a href="">
+            <a href="{% url 'course-detail-view' 'teacher' %}">
                 <div class="flex flex-col ">
                     <div class="bg-white shadow-md  rounded-3xl p-4">
                         <div class="flex-none lg:flex">
