--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -50,11 +50,12 @@
             <div class="hidden sm:flex">
               <a
                 class="rounded-md bg-gray-100 px-5 py-2.5 text-sm font-medium text-teal-600"
-                href="{% url 'register-page' %}"
+                href="{% url 'dashboard' %}"
               >
-                Register
+                Dashboard
               </a>
             </div>
+
           </div>
 
           <div class="block md:hidden">
