--- a/account/templates/register.html
+++ b/account/templates/register.html
@@ -11,6 +11,7 @@
           <div class="w-full lg:w-1/2 flex flex-col items-center justify-center p-12 bg-no-repeat bg-cover bg-center">
             <img src="{% static 'images/bg-register.jpg' %}" alt="Background image">
             <h1 class="text-black text-3xl mb-3">Welcome</h1>
+            
             <div>
               <p class="text-white">Personalize Your Experience <a href="#" class="text-purple-500 font-semibold"></a></p>
             </div>
@@ -24,7 +25,7 @@
               Register a new student.
               {% endif %}
             </p>
-            <form method="POST" hx-post="/add_student/" hx-target="body">
+            <form method="POST" hx-post="/add_account/{{faculty}}/{{semester}}" hx-target="body">
               {% csrf_token %}
               <div class="grid grid-cols-2 gap-5">
                
@@ -43,12 +44,7 @@
                 {{form.phone_number}}
               </div>
              
-              <div class="mt-5">
-                 {% if faculty != 'teacher' %}
-              {{form.semester.label}}
-               {{form.semester}}
-              {% endif %}
-              </div>
+             
               <div class="mt-5">
                 {{form.address.label}}
                 {{form.address}}
