--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,4 +1,6 @@
 {% load tailwind_tags %}
+{% load static %}
+<link rel="stylesheet" href="{% static 'images/style.css' %}">
 <!DOCTYPE html> 
 <html>
     <head>
@@ -11,7 +13,7 @@
   <div class="mx-auto max-w-screen-xl px-4 sm:px-6 lg:px-8">
     <div class="flex h-16 items-center justify-between">
       <div class="flex-1 md:flex md:items-center md:gap-12">
-        <a class="block text-teal-600" href="{% url 'home-page' %}">
+        <!-- <a class="block text-teal-600" href="{% url 'home-page' %}">
           <span class="sr-only">Home</span>
           <svg
             class="h-8"
@@ -24,6 +26,9 @@
               fill="currentColor"
             />
           </svg>
+        </a> -->
+        <a href="{% url 'home-page' %}">
+          <img src="{% static 'images/lg.png' %}">
         </a>
       </div>
 
