--- a/account/templates/register.html
+++ b/account/templates/register.html
@@ -8,11 +8,11 @@
     <div class="h-screen flex flex-col justify-center items-center">
       <div class="container mx-auto ">
         <div class="flex flex-col lg:flex-row w-10/12 lg:w-8/12 bg-white rounded-xl mx-auto shadow-lg overflow-hidden">
-          <div class="w-full lg:w-1/2 flex flex-col items-center justify-center p-12 bg-no-repeat bg-cover bg-center">
-            <img src="{% static 'images/bg-register.jpg' %}" alt="Background image">
+          <div class="w-full lg:w-1/2 flex flex-col items-center justify-center p-12 bg-no-repeat bg-cover bg-center" id="modal-id">
+            <!-- <img src="{% static 'images/bg-register.jpg' %}" alt="Background image"> -->
             <h1 class="text-black text-3xl mb-3">Welcome</h1>
             <div>
-              <p class="text-white">Personalize Your Experience <a href="#" class="text-purple-500 font-semibold"></a></p>
+              <p class="text-black">Personalize Your Experience </p>
             </div>
           </div>
           <div class="w-full lg:w-1/2 py-8 px-8">
@@ -57,7 +57,7 @@
 
 
               <div class="mt-5">
-                <button type="submit"  hx-target="body" class="w-full bg-teal-700 hover:bg-teal-600 py-3 text-center text-white">Register Now</button>
+                <button type="submit"  hx-target="body" class="w-full bg-teal-700 hover:bg-teal-600 py-3 text-center text-white rounded-lg">Register Now</button>
               </div>
             </form>
           </div>
