Styled course detail view

--- a/account/templates/register.html
+++ b/account/templates/register.html
@@ -1,7 +1,7 @@
 {% include 'navbar.html' %}
 {% load static %}
 
-<link rel="stylesheet" href="{% static 'images/style.css' %}">
+<link rel="stylesheet" href="{% static 'images/custom_style.css' %}">
 
  
     
