--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,6 +1,6 @@
 {% load tailwind_tags %}
 {% load static %}
-<link rel="stylesheet" href="{% static 'images/style.css' %}">
+<link rel="stylesheet" href="{% static 'images/custom_style.css' %}">
 <!DOCTYPE html> 
 <html>
     <head>
