Naming schemes changed and teacher view handled

--- a/account/templates/adash.html
+++ b/account/templates/adash.html
@@ -7,7 +7,7 @@
 <body>
     <div class="relative flex flex-col items-center justify-center "> 
         <div class="grid mt-32  gap-8 grid-cols-1 md:grid-cols-3 xl:grid-cols-3">
-            <a href="{% url 'course-detail-view' 'csit' %}">
+            <a href="{% url 'faculty-detail-view' 'csit' %}">
                 <div class="flex flex-col">
                     <div class="bg-white shadow-md  rounded-3xl p-4">
                         <div class="flex-none lg:flex">
@@ -36,7 +36,7 @@
                     </div>
                 </div>
             </a>
-            <a href="{% url 'course-detail-view' 'bim' %}">
+            <a href="{% url 'faculty-detail-view' 'bim' %}">
                 <div class="flex flex-col ">
                     <div class="bg-white shadow-md  rounded-3xl p-4">
                         <div class="flex-none lg:flex">
@@ -65,7 +65,7 @@
                     </div>
                 </div>
             </a>
-            <a href="{% url 'course-detail-view' 'teacher' %}">
+            <a href="{% url 'faculty-detail-view' 'teacher' %}">
                 <div class="flex flex-col ">
                     <div class="bg-white shadow-md  rounded-3xl p-4">
                         <div class="flex-none lg:flex">
