--- a/course/templates/faculty_detail.html
+++ b/course/templates/faculty_detail.html
@@ -7,8 +7,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
-    <title>Document</title>
+    
     <link rel="stylesheet" href="{% static 'images/custom_style.css' %}">
 </head>
 <body>
@@ -19,7 +18,7 @@
          <div class="service-col">
             <a href="{{i}}">
                 <p></p>
-                <h3>First Semester</h3>
+                <h3>Semester {{i}}</h3>
                 <hr>
                 </a>
             </div>
