--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -10,7 +10,7 @@
     </head>
    <body>
     <header aria-label="Site Header" class="bg-white">
-  <div class="mx-auto max-w-screen-xl px-4 sm:px-6 lg:px-8">
+  <div class="mx-auto max-w-screen-xl px-4 sm:px-6 lg:px-8 mt-3">
     <div class="flex h-16 items-center justify-between">
       <div class="flex-1 md:flex md:items-center md:gap-12">
         <!-- <a class="block text-teal-600" href="{% url 'home-page' %}">
