basic student dashboard created

--- a/account/templates/sdash.html
+++ b/account/templates/sdash.html
@@ -1,3 +1,8 @@
 {% include 'navbar.html' %}
 
-<h1> THIS IS THE STUDENT DASHBOARD</h1>
+<h1> Welcome {{user.first_name|title}} {{user.last_name|title}}</h1>
+{{user.faculty|upper}} Semester {{user.semester}} <br>
+{{user.username}} <br>
+{{user.email}} {{user.phone_number}} <br>
+{{user.address}} <br>
+{{user.id}} <br>
