--- a/course/templates/student-by-semester.html
+++ b/course/templates/student-by-semester.html
@@ -1,8 +1,8 @@
 {% include 'navbar.html' %}
 
-<button hx-get="/add_account/{{faculty}}/{{semester}}" hx-target="body">Add account</button>
+<button hx-get="/add_account/{{faculty}}/{{semester}}" hx-target="body" class="rounded-md bg-gray-100 px-5 py-2.5 text-sm font-medium text-teal-600 ">Add account</button>
 <!-- <a href="{% url 'add-account' faculty semester %}">Add account</a> -->
-<table class="table-auto">
+<!-- <table class="table-auto">
   <thead>
     <tr>
       <th>Username</th>
@@ -27,4 +27,35 @@
     </tr>
     {% endfor %}
   </tbody>
-</table>
+</table> -->
+
+<div class="flex justify-center">
+  <div class="w-full lg:w-3/4 xl:w-2/3">
+    <table class="table-auto border border-gray-300 mx-auto">
+      <thead>
+        <tr class="bg-gray-100">
+          <th class="px-4 py-2 border-r border-gray-400">Username</th>
+          <th class="px-4 py-2 border-r border-gray-400">First Name</th>
+          <th class="px-4 py-2 border-r border-gray-400">Last Name</th>
+          <th class="px-4 py-2 border-r border-gray-400">Email</th>
+          <th class="px-4 py-2 border-r border-gray-400">Phone Number</th>
+          <th class="px-4 py-2 border-r border-gray-400">Address</th>
+          <th class="px-4 py-2">Faculty</th>
+        </tr>
+      </thead>
+      <tbody>
+        {% for student in students %}
+        <tr class="hover:bg-gray-50">
+          <td class="border px-4 py-2">{{student.username}}</td>
+          <td class="border px-4 py-2">{{student.first_name}}</td>
+          <td class="border px-4 py-2">{{student.last_name}}</td>
+          <td class="border px-4 py-2">{{student.email}}</td>
+          <td class="border px-4 py-2">{{student.phone_number}}</td>
+          <td class="border px-4 py-2">{{student.address}}</td>
+          <td class="border px-4 py-2">{{student.faculty}}</td>
+        </tr>
+        {% endfor %}
+      </tbody>
+    </table>
+  </div>
+</div>
