added student table

--- a/static/images/custom_style.css
+++ b/static/images/custom_style.css
@@ -27,7 +27,7 @@ p{
 }
 .service-col{
     flex-basis: 23%;
-    background: #535aa0;
+    background: #4e8b9c;
     border-radius: 10px;
     margin-bottom: 5%;
     padding: 20px 12px;
