added table for teacher too

--- a/faculty/templates/student-by-semester.html
+++ b/faculty/templates/student-by-semester.html
@@ -40,7 +40,7 @@
           <th class="px-4 py-2 border-r border-gray-400">Email</th>
           <th class="px-4 py-2 border-r border-gray-400">Phone Number</th>
           <th class="px-4 py-2 border-r border-gray-400">Address</th>
-          <th class="px-4 py-2">Faculty</th>
+          <th class="px-4 py-2 border-r border-gray-400">Faculty</th>
         </tr>
       </thead>
       <tbody>
