New courses can be added.

--- a/account/templates/adash.html
+++ b/account/templates/adash.html
@@ -7,7 +7,8 @@
 <body>
     <div class="relative flex flex-col items-center justify-center "> 
         <div class="grid mt-32  gap-8 grid-cols-1 md:grid-cols-3 xl:grid-cols-3">
-            <a href="{% url 'faculty-detail-view' 'csit' %}">
+            {% for course in courses %}
+            <a href="{% url 'faculty-detail-view' course %}">
                 <div class="flex flex-col">
                     <div class="bg-white shadow-md  rounded-3xl p-4">
                         <div class="flex-none lg:flex">
@@ -17,7 +18,7 @@
                             </div>
                             <div class="flex-auto ml-3 justify-evenly py-2">
                                 <div class="flex flex-wrap ">
-                                    <h2 class="flex-auto text-lg font-medium">CSIT</h2>
+                                    <h2 class="flex-auto text-lg font-medium">{{course|upper}}</h2>
                                 </div>
                                 <p class="mt-3"></p>
                                 <div class="flex py-4  text-sm text-gray-500">
@@ -36,64 +37,8 @@
                     </div>
                 </div>
             </a>
-            <a href="{% url 'faculty-detail-view' 'bim' %}">
-                <div class="flex flex-col ">
-                    <div class="bg-white shadow-md  rounded-3xl p-4">
-                        <div class="flex-none lg:flex">
-                            <div class=" h-full w-full lg:h-48 lg:w-48   lg:mb-0 mb-3">
-                                <img src="{% static 'images/bim.jpg' %}"
-                                    alt="Image" class=" w-full  object-scale-down lg:object-cover  lg:h-48 rounded-2xl">
-                            </div>
-                            <div class="flex-auto ml-3 justify-evenly py-2">
-                                <div class="flex flex-wrap ">
-                                    <h2 class="flex-auto text-lg font-medium">BIM</h2>
-                                </div>
-                                <p class="mt-3"></p>
-                                <div class="flex py-4  text-sm text-gray-500">
-                                    <div class="flex-1 inline-flex items-center">
-                                        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2 text-gray-400" fill="none"
-                                            viewBox="0 0 24 24" stroke="currentColor">
-                                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                                d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"></path>
-                                        </svg>
-                                        <p class="">11:30 AM - 6:00 PM</p>
-                                    </div>
-                                </div>
-                                <div class="flex p-4 pb-2 border-t border-gray-200 "></div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </a>
-            <a href="{% url 'faculty-detail-view' 'teacher' %}">
-                <div class="flex flex-col ">
-                    <div class="bg-white shadow-md  rounded-3xl p-4">
-                        <div class="flex-none lg:flex">
-                            <div class=" h-full w-full lg:h-48 lg:w-48   lg:mb-0 mb-3">
-                                <img src="{% static 'images/staff.jpg' %}"
-                                    alt="Image" class=" w-full  object-scale-down lg:object-cover  lg:h-48 rounded-2xl">
-                            </div>
-                            <div class="flex-auto ml-3 justify-evenly py-2">
-                                <div class="flex flex-wrap ">
-                                    <h2 class="flex-auto text-lg font-medium">Staff</h2>
-                                </div>
-                                <p class="mt-3"></p>
-                                <div class="flex py-4  text-sm text-gray-500">
-                                    <div class="flex-1 inline-flex items-center">
-                                        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2 text-gray-400" fill="none"
-                                            viewBox="0 0 24 24" stroke="currentColor">
-                                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                                d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"></path>
-                                        </svg>
-                                        <p class="">6:30 AM - 6:30 PM</p>
-                                    </div>
-                                </div>
-                                <div class="flex p-4 pb-2 border-t border-gray-200 "></div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </a>
+            {% endfor %}
+           
         </div>
     </div>
 </body>
