Fixed bugs in url mappings that allowed accessing /add_student with inegers

--- a/faculty/templates/faculty_detail.html
+++ b/faculty/templates/faculty_detail.html
@@ -16,7 +16,7 @@
         {% for i in semesters %} 
         
          <div class="service-col">
-            <a href="{{i}}">
+            <a href= "/show/{{faculty}}/{{i}}">
                 <p></p>
                 <h3>Semester {{i}}</h3>
                 <hr>
