--- a/faculty/templates/student-by-semester.html
+++ b/faculty/templates/student-by-semester.html
@@ -30,66 +30,69 @@
   </tbody>
 </table> -->
 
-<head>
-  <script src="https://cdn.tailwindcss.com"></script>
-</head>
+
 
 <div class="flex pt-8">
-  <div class="w-15% pr-2">
-    <div class="py-2 bg-gray-100 rounded text-teal-600" style="max-width: none;">
-      <div class="px-4 cursor-pointer">
-        <div class="flex items-center justify-between p-2 ">
-          <div class="flex justify-between items-center w-full">
-            <div class="flex items-center">
-              <span class=" text-sm font-semibold hover:font-bold">Semester 1</span>
-            </div><span class="text-xs"></span>
-          </div><span class="pl-4"></span>
+    <div class="w-15% pr-2">
+        <div class="py-2 bg-gray-100 rounded text-teal-600" style="max-width: none;">
+            <div class="px-4 cursor-pointer">
+                <div class="flex items-center justify-between p-2 ">
+                    <div class="flex justify-between items-center w-full">
+                        <div class="flex items-center">
+                            <span class=" text-sm font-semibold hover:font-bold">Semester 1</span>
+                        </div><span class="text-xs"></span>
+                    </div><span class="pl-4"></span>
+                </div>
+            </div>
         </div>
-      </div>
-    </div>
 
-    <div class="py-2 bg-gray-100 rounded text-teal-600" style="max-width: none;">
-      <div class="px-4 cursor-pointer">
-        <div class="flex items-center justify-between p-2 hover:text-xl">
-          <div class="flex justify-between items-center w-full">
-            <div class="flex items-center">
-              <button hx-get="/add_account/{{faculty}}/{{semester}}" hx-target="body" class="rounded-md bg-gray-100 text-sm font-medium text-teal-600 hover:font-bold">Add account</button>
-            </div><span class="text-xs"></span>
-          </div><span class="pl-4"></span>
+        <div class="py-2 bg-gray-100 rounded text-teal-600" style="max-width: none;">
+            <div class="px-4 cursor-pointer">
+                <div class="flex items-center justify-between p-2 hover:text-xl">
+                    <div class="flex justify-between items-center w-full">
+                        <div class="flex items-center">
+                            <button hx-get="/add_account/{{faculty}}/{{semester}}" hx-target="body" class="rounded-md bg-gray-100 text-sm font-medium text-teal-600 hover:font-bold">Add account</button>
+                        </div><span class="text-xs"></span>
+                    </div><span class="pl-4"></span>
+                </div>
+            </div>
         </div>
-      </div>
     </div>
-  </div>
-  <div class="flex-grow">
-    <div class="flex justify-center">
-      <div class="w-full lg:w-3/4 xl:w-2/3">
-        <table class="table-auto border border-gray-300 mx-auto">
-          <thead>
-            <tr class="bg-gray-100">
-              <th class="px-4 py-2 border-r border-gray-400">Username</th>
-              <th class="px-4 py-2 border-r border-gray-400">First Name</th>
-              <th class="px-4 py-2 border-r border-gray-400">Last Name</th>
-              <th class="px-4 py-2 border-r border-gray-400">Email</th>
-              <th class="px-4 py-2 border-r border-gray-400">Phone Number</th>
-              <th class="px-4 py-2 border-r border-gray-400">Address</th>
-              <th class="px-4 py-2 border-r border-gray-400">Faculty</th>
-            </tr>
-          </thead>
-          <tbody>
-            {% for student in students %}
-            <tr class="hover:bg-gray-50">
-              <td class="border px-4 py-2">{{student.username}}</td>
-              <td class="border px-4 py-2">{{student.first_name}}</td>
-              <td class="border px-4 py-2">{{student.last_name}}</td>
-              <td class="border px-4 py-2">{{student.email}}</td>
-              <td class="border px-4 py-2">{{student.phone_number}}</td>
-              <td class="border px-4 py-2">{{student.address}}</td>
-              <td class="border px-4 py-2">{{student.faculty}}</td>
-            </tr>
-            {% endfor %}
-          </tbody>
-        </table>
-      </div>
+    <div class="flex-grow">
+        <div class="flex justify-center">
+            <div class="w-full lg:w-3/4 xl:w-2/3">
+                <table class="table-auto border border-gray-300 mx-auto">
+                    <thead>
+                        <tr class="bg-gray-100">
+                            <th class="px-4 py-2 border-r border-gray-400">Username</th>
+                            <th class="px-4 py-2 border-r border-gray-400">First Name</th>
+                            <th class="px-4 py-2 border-r border-gray-400">Last Name</th>
+                            <th class="px-4 py-2 border-r border-gray-400">Email</th>
+                            <th class="px-4 py-2 border-r border-gray-400">Phone Number</th>
+                            <th class="px-4 py-2 border-r border-gray-400">Address</th>
+                            <th class="px-4 py-2 border-r border-gray-400">Faculty</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {% for student in students %}
+                        <tr class="hover:bg-gray-50">
+                            <td class="border px-4 py-2">{{student.username}}</td>
+                            <td class="border px-4 py-2">{{student.first_name}}</td>
+                            <td class="border px-4 py-2">{{student.last_name}}</td>
+                            <td class="border px-4 py-2">{{student.email}}</td>
+                            <td class="border px-4 py-2">{{student.phone_number}}</td>
+                            <td class="border px-4 py-2">{{student.address}}</td>
+                            <td class="border px-4 py-2">{{student.faculty}}</td>
+                        </tr>
+                        {% endfor %}
+                    </tbody>
+                </table>
+            </div>
+        </div>
     </div>
-  </div>
 </div>
+{% for subject in subjects %} {{subject}} {% endfor %}
+
+<br>
+<br>
+<button hx-get="/faculty/add_subject/{{faculty}}/{{semester}}" hx-target="body"> Add subject </button>
