edited sdash little

--- a/account/templates/sdash.html
+++ b/account/templates/sdash.html
@@ -1,10 +1,11 @@
-{% include 'navbar.html' %} Hello {{user.first_name}} {{user.last_name}}.
-<br> {{user.faculty}} {{user.semester}} <sup>th</sup> semester
-<br> {{user.phone_number}}
-<br> {{user.address}}
+{% include 'navbar.html' %}
+<div class="pt-2 text-center ">
+  <span class="font-semibold px-5 py-5 rounded-md text-2xl">Welcome {{user.first_name}} {{user.last_name}}</span>
+  <span><br> {{user.faculty}} {{user.semester}} <sup>th</sup> semester</span>
+</div>
 
 <br> <br>
-<h1> YOUR SUBJECTS</h1>
+<h1 class="text-lg font-semibold"> YOUR SUBJECTS</h1>
 {% for subject in subjects %} {{subject}} {% endfor %}
 
 <br>
